Added basic HTML
Added text
Linked multiple pages to homepage

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
   </head>
   <body>
     <h1>Croissant</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti iste
+      quam, quia aut itaque consectetur nesciunt ex officia sunt quos cumque
+      facilis voluptate dignissimos saepe, necessitatibus beatae odit. Sed,
+      neque!
+    </p>
+    <div>
+      <a href="/index.html">Home</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
   </body>
 </html>
