Added basic HTML
Added picture
Linked pages

--- a/photo.html
+++ b/photo.html
@@ -6,5 +6,16 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Photo</title>
   </head>
-  <body></body>
+  <body>
+    <h1>A picture of a Croissant</h1>
+    <img
+      src="/pictures/jocelyn-morales-qqIj5pV48-s-unsplash.jpg"
+      alt="croissant"
+    />
+    <div>
+      <a href="/index.html">Home</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
+  </body>
 </html>
