--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,15 @@
     <title>Contact</title>
   </head>
   <body>
-    <h1>Contact Us</h1>
+    <h1>🥐Contact Us</h1>
     <p>
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
+    <div>
+      <a href="/index.html">Home</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact us</a>
+    </div>
   </body>
 </html>
