--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <body>
     <h1>Croissant</h1>
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti iste
-      quam, quia aut itaque consectetur nesciunt ex officia sunt quos cumque
-      facilis voluptate dignissimos saepe, necessitatibus beatae odit. Sed,
-      neque!
+      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+      named for its historical crescent shape. Croissants and other viennoiserie
+      are made of a layered yeast-leavened dough
     </p>
     <div>
-      <a href="/index.html">Home</a>
+      <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
     </div>
