--- a/photo.html
+++ b/photo.html
@@ -7,13 +7,13 @@
     <title>Photo</title>
   </head>
   <body>
-    <h1>A picture of a Croissant</h1>
+    <h1>🥐 A picture of a Croissant</h1>
     <img
       src="/pictures/jocelyn-morales-qqIj5pV48-s-unsplash.jpg"
       alt="croissant"
     />
     <div>
-      <a href="/index.html">Home</a>
+      <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
     </div>
