Added basic style to all pages

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <div>
+    <div class="navigation-links">
       <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact us</a>
+      <a href="/contact.html">Contact</a>
     </div>
   </body>
 </html>
