--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
       src="/pictures/jocelyn-morales-qqIj5pV48-s-unsplash.jpg"
       alt="croissant"
     />
-    <div>
+    <div class="navigation-links">
       <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
