--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="SR Croissant Regional Pastry| Baked with love"
+    />
     <link rel="stylesheet" href="style/style.css" />
-    <title>🥐 Croissant</title>
+
+    <title>SR Croissant Regional Pastry | sr-croissant.com</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -14,9 +19,9 @@
       are made of a layered yeast-leavened dough
     </p>
     <div class="navigation-links">
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html">Go to Homepage</a>
+      <a href="/photo.html">Discover our Products</a>
+      <a href="/contact.html">Contact Us</a>
     </div>
   </body>
 </html>
