--- a/photo.html
+++ b/photo.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="SR Croissant Regional Pastry | Discover our products"
+    />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Photo</title>
+    <title>SR Croissant Products | sr-croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a Croissant</h1>
     <img
       src="/pictures/jocelyn-morales-qqIj5pV48-s-unsplash.jpg"
-      alt="croissant"
+      alt="A picture of a Croissant on a plate"
     />
     <div class="navigation-links">
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html">Go to Homepage</a>
+      <a href="/photo.html">Discover our Products</a>
+      <a href="/contact.html">Contact Us</a>
     </div>
   </body>
 </html>
