--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact us | SR Croissant Regional Pastry "
+    />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Contact</title>
+    <title>Contact us | sr-croissant.com</title>
   </head>
   <body>
     <h1>🥐 Contact Us</h1>
@@ -13,9 +17,9 @@
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <div class="navigation-links">
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/index.html">Go to Homepage</a>
+      <a href="/photo.html">Discover our Products</a>
+      <a href="/contact.html">Contact Us</a>
     </div>
   </body>
 </html>
