--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contact us | SR Croissant Regional Pastry "
+      content="Contact SR Croissant Regional Pastry | Pastry baked with love "
     />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Contact us | sr-croissant.com</title>
+    <title>Contact SR Croissant Regional Pastry | sr-croissant.com</title>
   </head>
   <body>
     <h1>🥐 Contact Us</h1>
