--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="SR Croissant Regional Pastry | Discover our products"
+      content="SR Croissant Regional Pastry | Discover our products baked with love"
     />
     <link rel="stylesheet" href="style/style.css" />
     <title>SR Croissant Products | sr-croissant.com</title>
