--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contact SR Croissant Regional Pastry | Pastry baked with love "
+      content="Contact SR Croissant Regional Pastry | Vegan pastry baked with love "
     />
     <link rel="stylesheet" href="style/style.css" />
     <title>Contact SR Croissant Regional Pastry | sr-croissant.com</title>
