--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="SR Croissant Regional Pastry| Pastry baked with love"
+      content="SR Croissant Regional Pastry Homepage | Vegan pastry baked with love "
     />
     <link rel="stylesheet" href="style/style.css" />
 
