SEO Fixed Links

--- a/photo.html
+++ b/photo.html
@@ -17,9 +17,9 @@
       alt="A picture of a Croissant on a plate"
     />
     <div class="navigation-links">
-      <a href="/index.html">Go to Homepage</a>
-      <a href="/photo.html">Discover our Products</a>
-      <a href="/contact.html">Contact Us</a>
+      <a href="/index.html" title="Homepage">Go to Homepage</a>
+      <a href="/photo.html" title="Products">Discover our Products</a>
+      <a href="/contact.html" title="Contact">Contact Us</a>
     </div>
   </body>
 </html>
