--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <div class="navigation-links">
-      <a href="/index.html">Go to Homepage</a>
-      <a href="/photo.html">Discover our Products</a>
-      <a href="/contact.html">Contact Us</a>
+      <a href="/index.html" title="Homepage">Go to Homepage</a>
+      <a href="/photo.html" title="Products">Discover our Products</a>
+      <a href="/contact.html" title="Contact">Contact Us</a>
     </div>
   </body>
 </html>
