--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       are made of a layered yeast-leavened dough
     </p>
     <div class="navigation-links">
-      <a href="/index.html">Go to Homepage</a>
-      <a href="/photo.html">Discover our Products</a>
-      <a href="/contact.html">Contact Us</a>
+      <a href="/index.html" title="Homepage">Go to Homepage</a>
+      <a href="/photo.html" title="Products">Discover our Products</a>
+      <a href="/contact.html" title="Contact">Contact Us</a>
     </div>
   </body>
 </html>
